@@ -1,5 +1,6 @@
 require("__rubia__.prototypes.data-script.crapapult-recipes")
 require("__rubia__.prototypes.data-script.rubia-surface-blacklist")
+require("__rubia__.prototypes.data-script.asteroid-update")
 require("__rubia__.prototypes.technology-final-fixes")
 require("__rubia__.compat.distant-misfires")
 
